--- a/style.css
+++ b/style.css
@@ -1,36 +1,115 @@
-p,h2,h3{
-    text-align: center;
-}
-em strong{
-    color: #d66d6d;
+header {
+    background: #bbbbbb;
+    padding: 20px 0;
+    ;
 }
 
-#banner{
-    width: 100%;
+.caja {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
-#mision{
-    font-size: 20px;
+
+nav {
+    position: absolute;
+    top: 100px;
+    right: 0;
 }
-.titulo-principal{
-padding-left: 30px;
+
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
-.principal{
-    background: #cccccc;
-    padding: 20px;
+
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
-.diferenciales{
-    background: #ffffff;
-    padding: 30px;
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
-.items{
-    font-style: italic;
+
+.productos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
 }
-ul{
+
+
+.productos li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
-.imagen-diferencial{
-    width: 20%;
+
+.productos li:hover {
+    border-color: #C78C19;
+}
+
+.productos li:active {
+    border-color: #088C19;
+}
+
+.productos li:hover h2 {
+    font-size: 33px;
+}
+
+.productos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.producto-descripcion {
+    font-size: 18px;
+}
+
+.producto-precio {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
+}
+
+.copyright {
+    color: #ffffff;
+    font-size: 13px;
+    margin: 20px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+form input {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
 }
